scripts/istio-configurations/virtual-service-recommendation-delegate-ns1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: v1
      weight: 34
    - destination:
        host: recommendation
        subset: v2
      weight: 33
    - destination:
        host: recommendation
        subset: v3
      weight: 33
    fault:
      delay:
        fixedDelay: 7.000s
        percent: 50
---
